--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,14 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    <fragment android:name="fr.utt.isi.nomp_mobile.fragments.forms.TicketFormFragment"
+          android:id="@+id/ticket_form_fragment"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent" />
 
 </RelativeLayout>
