--- a/res/layout/ticket_form_template.xml
+++ b/res/layout/ticket_form_template.xml
@@ -31,7 +31,8 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/text_hint_description"
-        android:inputType="text" >
+        android:lines="3"
+        android:inputType="textMultiLine" >
     </EditText>
 
     <TextView
