--- a/res/layout/activity_ticket_form.xml
+++ b/res/layout/activity_ticket_form.xml
@@ -6,8 +6,8 @@
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
-    
+    tools:context=".TicketFormActivity" >
+
     <fragment android:name="fr.utt.isi.nomp_mobile.fragments.forms.NeedFormFragment"
           android:id="@+id/need_form_fragment"
           android:layout_width="match_parent"
