--- a/res/layout/activity_ticket_page.xml
+++ b/res/layout/activity_ticket_page.xml
@@ -3,14 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="0dp"
-    android:paddingRight="0dp"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
-    
-    <fragment android:name="fr.utt.isi.nomp_mobile.fragments.forms.NeedFormFragment"
-          android:id="@+id/need_form_fragment"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent" />
+    tools:context=".TicketPageActivity" >
+
 
 </RelativeLayout>
