--- a/res/layout/ticket_form_template.xml
+++ b/res/layout/ticket_form_template.xml
@@ -48,6 +48,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/text_button_classification" />
+    
+    <Spinner
+        android:id="@+id/spinner_classification"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <Spinner
+        android:id="@+id/spinner_sub_classification"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/label_target"
@@ -62,6 +72,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/text_button_target" />
+    
+    <Spinner
+        android:id="@+id/spinner_target"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <Spinner
+        android:id="@+id/spinner_sub_target"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/label_period"
