--- a/res/layout/ticket_form_template.xml
+++ b/res/layout/ticket_form_template.xml
@@ -174,6 +174,14 @@
     </EditText>
     
     <TextView
+        android:id="@+id/geometry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:layout_marginTop="12dp"
+        android:visibility="invisible" />
+    
+    <TextView
         android:id="@+id/label_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
