--- a/res/layout/activity_sign_up.xml
+++ b/res/layout/activity_sign_up.xml
@@ -15,6 +15,14 @@
         android:layout_height="wrap_content"
         android:text="@string/text_label_full_name"
         android:textSize="20sp" />
+    <TextView
+        android:id="@+id/error_full_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/text_error_full_name"
+        android:textColor="#FF0000"
+        android:textSize="16sp"
+        android:visibility="gone" />
 
     <EditText
         android:id="@+id/full_name"
@@ -31,6 +39,22 @@
         android:layout_height="wrap_content"
         android:text="@string/text_label_email"
         android:textSize="20sp" />
+    <TextView
+        android:id="@+id/error_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/text_error_email"
+        android:textColor="#FF0000"
+        android:textSize="16sp"
+        android:visibility="gone" />
+    <TextView
+        android:id="@+id/error_email_format"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/text_error_email_format"
+        android:textColor="#FF0000"
+        android:textSize="16sp"
+        android:visibility="gone" />
 
     <EditText
         android:id="@+id/email"
@@ -47,6 +71,14 @@
         android:layout_height="wrap_content"
         android:text="@string/text_label_username"
         android:textSize="20sp" />
+    <TextView
+        android:id="@+id/error_username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/text_error_username"
+        android:textColor="#FF0000"
+        android:textSize="16sp"
+        android:visibility="gone" />
 
     <EditText
         android:id="@+id/username"
@@ -63,6 +95,14 @@
         android:layout_height="wrap_content"
         android:text="@string/text_label_password"
         android:textSize="20sp" />
+    <TextView
+        android:id="@+id/error_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/text_error_password"
+        android:textColor="#FF0000"
+        android:textSize="16sp"
+        android:visibility="gone" />
 
     <EditText
         android:id="@+id/password"
