--- a/res/layout/activity_sign_up.xml
+++ b/res/layout/activity_sign_up.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:text="@string/text_label_full_name"
         android:textSize="20sp" />
+
     <TextView
         android:id="@+id/error_full_name"
         android:layout_width="wrap_content"
@@ -39,6 +40,7 @@
         android:layout_height="wrap_content"
         android:text="@string/text_label_email"
         android:textSize="20sp" />
+
     <TextView
         android:id="@+id/error_email"
         android:layout_width="wrap_content"
@@ -47,6 +49,7 @@
         android:textColor="#FF0000"
         android:textSize="16sp"
         android:visibility="gone" />
+
     <TextView
         android:id="@+id/error_email_format"
         android:layout_width="wrap_content"
@@ -71,6 +74,7 @@
         android:layout_height="wrap_content"
         android:text="@string/text_label_username"
         android:textSize="20sp" />
+
     <TextView
         android:id="@+id/error_username"
         android:layout_width="wrap_content"
@@ -95,6 +99,7 @@
         android:layout_height="wrap_content"
         android:text="@string/text_label_password"
         android:textSize="20sp" />
+
     <TextView
         android:id="@+id/error_password"
         android:layout_width="wrap_content"
@@ -133,6 +138,15 @@
                 android:layout_height="wrap_content"
                 android:text="@string/text_label_source"
                 android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/error_source"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_error_source"
+                android:textColor="#FF0000"
+                android:textSize="16sp"
+                android:visibility="gone" />
 
             <Spinner
                 android:id="@+id/spinner_source"
