--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,6 +1,6 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="fr.utt.isi.nomp_mobile.LoginActivity" >
+    tools:context="fr.utt.isi.nomp_mobile.activities.LoginActivity" >
 
     <!-- Login progress -->
 
